--- a/gb/16/12/5/n8561145.md
+++ b/gb/16/12/5/n8561145.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ssdabc3483/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ssdabc3483/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ssdabc3483/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>一例一休今闯关 蔡英文：尽速完成立法</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2016年12月05日讯】（大纪元记者吴旻洲、萧轩、郭岳仁台湾台北报导）攸关“<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E4%B8%80%E4%BE%8B%E4%B8%80%E4%BC%91.md#1">一例一休</a>”的《劳动基准法》修正案上周五闯关失败，民进党团今（6）日将卷土重来。<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E7%AB%8B%E6%B3%95.md#1">立法</a>院长苏嘉全5日表示，“一例一休”攸关台湾经济发展，不希望任何党派霸占主席台，阻碍议事进行；不过国民党团总召廖国栋说，国民党仍会坚定捍卫劳工休假权益，不排除继续霸占主席台；劳团则预告，将重返立法院，要求民进党立委面对民意，退回砍假修法。</p>
-<p>稍晚蔡英文则在执政协调会议上指示，立院党团与政院讨论的特休假版本，是增加资浅劳工的特休天数，社会讨论已久，盼政府尽速定案，请立院党团尽速完成<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E7%AB%8B%E6%B3%95.md#1">立法</a>。</p>
+<p>【大纪元2016年12月05日讯】（大纪元记者吴旻洲、萧轩、郭岳仁台湾台北报导）攸关“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%80%E4%BE%8B%E4%B8%80%E4%BC%91.md#1">一例一休</a>”的《劳动基准法》修正案上周五闯关失败，民进党团今（6）日将卷土重来。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%AB%8B%E6%B3%95.md#1">立法</a>院长苏嘉全5日表示，“一例一休”攸关台湾经济发展，不希望任何党派霸占主席台，阻碍议事进行；不过国民党团总召廖国栋说，国民党仍会坚定捍卫劳工休假权益，不排除继续霸占主席台；劳团则预告，将重返立法院，要求民进党立委面对民意，退回砍假修法。</p>
+<p>稍晚蔡英文则在执政协调会议上指示，立院党团与政院讨论的特休假版本，是增加资浅劳工的特休天数，社会讨论已久，盼政府尽速定案，请立院党团尽速完成<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%AB%8B%E6%B3%95.md#1">立法</a>。</p>
 <p>民进党团原希望让《劳基法》修正案在2日就三读通过，不过因劳团激烈抗议、民进党团总召柯建铭又遭殴打，立法院议场内还有国民党立委霸占主席台，最终苏嘉全以朝野气氛不佳为由，裁示6日继续开会。</p>
-<p>苏嘉全表示，上周五是进行大体讨论，6日将进入逐条讨论，一切将按议事规则进行，且<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E4%B8%80%E4%BE%8B%E4%B8%80%E4%BC%91.md#1">一例一休</a>攸关台湾经济发展，不希望任何党派利用机会霸占主席台，阻碍议事进行，今天将与各党团协商。</p>
+<p>苏嘉全表示，上周五是进行大体讨论，6日将进入逐条讨论，一切将按议事规则进行，且<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%80%E4%BE%8B%E4%B8%80%E4%BC%91.md#1">一例一休</a>攸关台湾经济发展，不希望任何党派利用机会霸占主席台，阻碍议事进行，今天将与各党团协商。</p>
 <p>对于《劳基法》修正案引发各界争议，苏嘉全强调，每个法案都有支持与反对的人，必须看国家竞争力和整体社会想法，每个党要为做出的决定负起责任，但若是用杯葛的方式、瘫痪立院，立法院干脆就解散。他认为，各政党负起各自责任，所订的政策由所有人民做最后裁判，这才是民主。</p>
 <p>不过国民党团总召廖国栋说，国民党仍会坚定捍卫劳工权益，不排除会继续霸占主席台；时代力量立委徐永明则质疑，总统10月初承诺要多给劳工特休假，但民进党版上周四还是一片空白，直到被骂才拿出方案，而从最近的民调也可以知道，有高达53.5%的民众希望维持7天假，为何就不重视呢？而且政策假如真的好，执政党团为何要用党纪威胁党籍立委？</p>
 <p>针对一例一休修法进程，林全表示，政府已做了很多沟通，也尝试尽可能取得平衡点，让劳工权益得到充分照顾。他指出，一例一休通过后，将对国内劳工过劳问题、劳工权益保障和企业界适应，都有最好的改善。</p>
@@ -20,47 +20,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/11/3/n8457299.md#1">不满一例一休 蓝拟表决大战瘫痪台院会</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/11/4/n8460723.md#1">不满砍七天假 台劳团无限期绝食抗争</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/11/8/n8471834.md#1">台劳基法争议今勘验录影 下周二开公听会</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/11/11/n8484757.md#1">台下周重审劳基法 必要时挑灯夜战</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/11/18/n8503341.md#1">劳基法完成初审 柯建铭：盼年底前落幕</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/11/18/n8504965.md#1">台工商协会理事长：取消 7天假是配套  非砍假</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/12/1/n8548515.md#1">民进党版特休 工作半年可休3天</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/12/2/n8551036.md#1">抗议周休二日修法  国民党团再占主席台</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/12/2/n8552675.md#1">柯建铭遭扭打 国民党吁正视劳团诉求</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/12/2/n8552681.md#1">国民党版本劳基法 年资6年特休21天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/11/3/n8457299.md#1">不满一例一休 蓝拟表决大战瘫痪台院会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/11/4/n8460723.md#1">不满砍七天假 台劳团无限期绝食抗争</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/11/8/n8471834.md#1">台劳基法争议今勘验录影 下周二开公听会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/11/11/n8484757.md#1">台下周重审劳基法 必要时挑灯夜战</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/11/18/n8503341.md#1">劳基法完成初审 柯建铭：盼年底前落幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/11/18/n8504965.md#1">台工商协会理事长：取消 7天假是配套  非砍假</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/12/1/n8548515.md#1">民进党版特休 工作半年可休3天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/12/2/n8551036.md#1">抗议周休二日修法  国民党团再占主席台</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/12/2/n8552675.md#1">柯建铭遭扭打 国民党吁正视劳团诉求</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/12/2/n8552681.md#1">国民党版本劳基法 年资6年特休21天</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/31/n9789303.md#1" target="_blank">林辉：曾大红大紫的魏巍被批判与软禁的人生</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/7/4/n9355207.md#1" target="_blank">一位美国微软工程师修炼法轮功的故事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10069025.md#1" target="_blank">杨宁：八路军为何大量购买治花柳病的药品？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/23/n11890264.md#1" target="_blank">《转法轮》为波兰青年打造全新的生命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/21/n13594841.md#1">【未解之谜】梅辛传之四：权势抵不过天意</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/14/n13575567.md#1">【人生之钥】算命人的秘诀：告诉你算命准与不准的原因</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13611592.md#1">【新闻大家谈】俄亮核武威胁 中共幕后参与？</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13612301.md#1">【远见快评】俄入侵闪电战失败 国际秩序重组</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13611364.md#1">林晓旭：极端防疫酿灾难 吁港府派早期治疗药物</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/25/n13605832.md#1">保持心脏健康 营养师推荐在Costco买六种食物</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/26/n13607072.md#1">【更新2.26】俄军遭遇后勤挑战与坚定抵抗</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13608596.md#1">徐州铁链女事件持续发酵 中国金融圈怒了</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13607917.md#1">家乡遭俄军攻击 瑞莎崩溃怒喊：究竟为了什么</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13607417.md#1">《维京传奇：英灵神殿》影评：复仇成功 只是挑战的开始</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/26/n13606670.md#1">每个人在选择油漆颜色时都会犯的6个错误</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ssdabc3483/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ssdabc3483/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/12/5/n8561145.htm">一例一休今闯关 蔡英文：尽速完成立法</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/12/5/n8561145.htm">一例一休今闯关 蔡英文：尽速完成立法</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ssdabc3483/djy/blob/master/gb/16/12/5/n8561145.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ssdabc3483/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ssdabc3483/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/12/5/n8561145.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
